--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
                 <span>CAROLINE</span>
             </div>
             <div class="links">
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#" onclick="showSection('home')">Home</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#" onclick="showSection('about')">About</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a href="#" onclick="showSection('skills')">Skills</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#" onclick="showSection('interests')">Interests</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#" onclick="showSection('projects')">Projects</a></div>
-                <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#" onclick="showSection('contact')">Contact Us</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#home">Home</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#about">About</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a href="#skills">Skills</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#interests">Interests</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#projects">Projects</a></div>
+                <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#contact">Contact Us</a></div>
             </div>
             <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
         </div>
         <div class="dropdown">
             <div class="links">
-                <a href="#" onclick="showSection('home')">Home</a>
-                <a href="#" onclick="showSection('about')">About</a>
-                <a href="#" onclick="showSection('skills')">Skills</a>
-                <a href="#" onclick="showSection('interests')">Interests</a>
-                <a href="#" onclick="showSection('projects')">Projects</a>
-                <a href="#" onclick="showSection('contact')">Contact me</a>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#interests">Interests</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact me</a>
                 <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
             </div>
         </div>
@@ -51,7 +51,7 @@
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="1300">
-                    <a href="CarolineW CV (1).pdf" download aria-label="Download CV"><button>Download CV</button></a>
+                    <a href="#cv" aria-label="View CV"><button>View CV</button></a>
                 </div>
             </div>
         </div>
@@ -106,6 +106,11 @@
     
             <button type="submit" class="submit-btn">Send Message</button>
         </form>
+    </section>
+
+    <section id="cv" class="section-content">
+        <h2>View CV</h2>
+        <iframe src="CarolineW CV (1).pdf" width="100%" height="800px"></iframe>
     </section>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
